# Smart_Village_Budget_And_Expenses_Tracker

./: QUICKSTART.md  README.md
backend/: .env.example  .gitignore  DATABASE_SCHEMA.md  README.md  alembic.ini  list_users.py  pyproject.toml  seed_data.py  set_admin.py
backend/alembic/: env.py
backend/alembic/versions/: 0757e672bd5e_add_users_table.py  20260212_add_role_to_users.py  52279cc470c6_add_village_id_to_users.py  7838992d0700_merge_heads.py  cb977b260575_initial_schema.py
backend/app/: __init__.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  auth.py  budgets.py  categories.py  expenses.py  villages.py
frontend/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/charts/: BudgetCharts.tsx  CategoryCharts.tsx  ExpenseCharts.tsx
frontend/src/components/landing/: budget-overview.tsx  cta.tsx  footer.tsx  hero.tsx  navbar.tsx
frontend/src/components/layout/: DashboardLayout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: input.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Landing.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/dashboard/: Budgets.tsx  Categories.tsx  DashboardHome.tsx  Expenses.tsx  Villages.tsx
frontend/src/routes/: DashboardRoutes.tsx  PublicRoutes.tsx
frontend/src/services/: api.ts
